fixed hero on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1541,7 +1541,7 @@ body.no-scroll {
         align-items: center;
         text-align: center;
         margin-top: auto;
-        margin-bottom: 50px;
+        margin-bottom: 20px;
         flex-direction: column;
         justify-content: center;
         padding: 24px 56px 40px;
